Fix heading text not overflowing properly in IE9.

--- a/css/hn-web.css
+++ b/css/hn-web.css
@@ -139,6 +139,7 @@ button{
 	white-space: nowrap;
 	text-overflow: ellipsis;
 	overflow: hidden;
+	word-wrap: normal;
 }
 .view>.scroll{
 	overflow: hidden;
